--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
 
+    <item
+        android:id="@+id/fragment_Contactanos"
+        android:icon="@drawable/baseline_contact_support_24"
+        android:title="Contactanos"/>
+
 </menu>
